# NekoAI

./: .commitlintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  STORY-Neko.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_pet.md
.github/workflows/: ci.yml  metrics.yml  release.yml
assets/: README.md
assets/NekoAI-icons/Web/: manifest.json
docs/: architecture.md  creating-a-pet.md  feature-nekometrics-v0.3.md  feature-nekometrics-v0.4.md  install-linux.md  install-windows.md  screen-tools-plan.md  showcase.md
docs/metrics/: README.md  SCHEMA.md  latest.json
docs/metrics/snapshots/: 2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  (+37 more)
pets/: manifest.json
pets-community/: README.md
pets/bsd-daemon/: pet.json
pets/classic-neko/: README.md  pet.json
pets/dragon-pixel/: README.md  pet.json
pets/ghost-pixel/: README.md  pet.json
pets/pac-man/: pet.json
pets/penguin-pixel/: README.md  pet.json
pets/shiba-pixel/: README.md  pet.json
pets/tabby/: pet.json
pets/tie-fighter/: pet.json
schemas/: pet.schema.json
scripts/: build-portable-windows.ps1  bump-version.mjs  convert-sprites.py  gen-icon.mjs
scripts/metrics/: collect.mjs  parse-asset.mjs  parse-asset.test.mjs
src/: App.css  App.tsx  HouseWindow.tsx  PanelWindow.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 128x128@2x.icns  icon.icns
src-tauri/src/: cursor_tracker.rs  desktop_monitor.rs  lib.rs  main.rs  storage.rs
src/ai/: index.ts  memory.ts  types.ts
src/ai/providers/: anthropic.ts  gemini.ts  nvidia.ts  ollama.ts  openai.ts
src/components/: ContextMenu.tsx  PetSelector.tsx  PetSprite.tsx  SettingsPanel.tsx  SpeechBubble.css  SpeechBubble.tsx  index.ts
src/hooks/: useDesktopContext.ts  useDraggable.ts  useIdleSequencer.ts  useMoodEngine.ts  useOnboarding.ts  usePetAnimation.ts  usePetMovement.ts
src/pets/: PetBrain.ts  PetRenderer.tsx  index.ts  loader.ts  placeholderSprite.ts
src/store/: configStore.ts  index.ts
src/types/: pet.ts
src/utils/: platform.ts
