[package]
name = "nekoai"
version = "0.1.0"
description = "NekoAI - Desktop Pet with AI"
authors = ["NekoAI"]
edition = "2021"

[lib]
name = "nekoai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
mouse_position = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
