[package]
name = "nekoai"
version = "0.1.0"
description = "NekoAI - Desktop Pet with AI"
authors = ["NekoAI"]
edition = "2021"

[lib]
name = "nekoai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
mouse_position = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["screensaver"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
