[package]
name = "nekoai"
version = "0.3.6"
description = "NekoAI - Desktop Pet with AI"
authors = ["NekoAI"]
edition = "2021"

[lib]
name = "nekoai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
mouse_position = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["screensaver"] }
# Reads raw relative mouse motion from /dev/input so the pet can still follow
# the cursor on Wayland sessions, where X11 XQueryPointer is frozen unless the
# pointer is over one of our own surfaces. See src/cursor_tracker.rs.
evdev = "0.13"
# Used to apply per-frame shape masks on the transparent pet window. WebKitGTK
# transparent windows have a compositor bug on Linux (additive blending of
# sprite frames), so on Linux we keep the window technically opaque with a
# magenta chroma-key fill and cut out non-sprite pixels with cairo regions
# via gtk_widget_shape_combine_region. Same gtk-rs versions Tauri 2 uses.
gtk = "0.18"
cairo-rs = "0.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
